fixed bad spacings, added more color

--- a/pitchgame.css
+++ b/pitchgame.css
@@ -4,19 +4,19 @@ html {
 }
 body {
 	font-family: Georgia, serif;
-	max-width: 64em;
-	padding: 0.6em;
+	max-width: 64rem;
+	padding: 0.6rem;
 	margin: 0 auto;
 }
 h2 {
-	margin-top: 0.5em;
+	margin-top: 0.5rem;
 }
 .title {
 	text-align: center;
 	padding: 0;
 	margin: 2.5rem auto 1.3rem auto;
 	max-width: 85%;
-	font-size: 155%;
+	font-size: 133%;
 	color: #AA3322;
 	transform: perspective(10rem) rotateX(-15deg) scaleY(3.5);
 }
@@ -30,10 +30,10 @@ h2 {
 	display: none;
 	position: absolute;
 	z-index: 1;
-	width: calc(100% - 4em);
+	width: calc(100% - 4rem);
 	left: 50%;
-	margin: -0.5em -50%;
-	padding: 2em;
+	margin: -0.5rem -50%;
+	padding: 2rem;
 }
 .plop .backer {
 	background-color: gray;
@@ -46,17 +46,17 @@ h2 {
 }
 .plop aside {
 	position: relative;
-	padding: 1em;
+	padding: 1rem;
 	z-index: 1;
 	background-color: #FFFAFA;
-	box-shadow: 0 0 1em 0 gray;
+	box-shadow: 0 0 1rem 0 gray;
 }
 .plop .closer {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 1em;
-	height: 0.8em;
+	width: 1rem;
+	height: 0.8rem;
 	border: 1px solid gray;
 	background-color: white;
 	font-size: 250%;
@@ -66,20 +66,20 @@ h2 {
 .plop .closer span {
 	font-weight: bold;
 	position: relative;   /* vertical-align does nothing */
-	top: -0.26em;
+	top: -0.26rem;
 }
 @media screen and (min-width: 40em) {
 	.narrow {
-		max-width: 36em;
-		margin: 2em -19.5em;
+		max-width: 36rem;
+		margin: 2rem -19.5rem;
 	}
 	.userSummary td:first-child {
 		white-space: nowrap;
-		padding-right: 0.5em;
+		padding-right: 0.5rem;
 	}
 }
 .narrow aside {
-	box-shadow: 0 0 3em 0 gray;
+	box-shadow: 0 0 3rem 0 gray;
 	/*text-shadow: 0 0 1.5px white;*/
 }
 .plop.narrow {
@@ -92,48 +92,54 @@ h2 {
 
 label, button {
 	font-family: Verdana, sans-serif;
-	font-size: 88%;
+	font-size: 94%;
+	color: #000077;
 	display: inline-block;
 }
 button {
-	margin: 0.6em 0;
-	padding: 0.2em 0.6em;
+	margin: 0.6rem 0;
+	padding: 0.2rem 0.6rem;
 	background-color: #88EE88;
 	border-left: 3px solid #88CC88;
 	border-top: 3px solid #88CC88;
 	border-right: 3px solid #449944;
 	border-bottom: 3px solid #449944;
-	border-radius: 0.33em;
+	border-radius: 0.33rem;
 	box-shadow: 0 0 3px 0 rgba(222, 255, 222, 0.2);
 	transition: box-shadow 0.1s linear;
 }
 button:hover {
-	box-shadow: 0 0 0.75em 0 rgba(50, 200, 50, 1.0);
+	box-shadow: 0 0 0.75rem 0 rgba(50, 200, 50, 1.0);
 	transition: box-shadow 0.1s linear;
 }
 input[type=text], textarea {
 	font-family: Georgia, serif;
 	font-size: 100%;
-	border-radius: 0.33em;
-	margin: 0.25em;
+	border-radius: 0.33rem;
+	margin: 0.25rem;
 	display: inline-block;
 	background-color: #F0FFF0;
 	border-left: 3px solid #669966;
 	border-top: 3px solid #669966;
 	border-right: 3px solid #AADDAA;
 	border-bottom: 3px solid #AADDAA;
-	border-radius: 0.33em;
-	box-shadow: 0 0 3px 0 rgba(220, 255, 220, 0.33);
+	border-radius: 0.33rem;
+	box-shadow: 0 0 0.25rem 0 rgba(220, 255, 220, 0.33);
 	transition: box-shadow 0.1s linear;
 }
 textarea {
 	width: 75%;
-	height: 8em;
+	height: 8rem;
 	vertical-align: middle;
 }
-input[type=text]:hover, input[type=text]:focus, textarea:hover, textarea:focus {
-	box-shadow: 0 0 0.5em 0 rgba(140, 255, 140, 1.0);
+input[type=text]:hover, textarea:hover {
+	box-shadow: 0 0 0.75rem 0 rgba(140, 255, 140, 1.0);
 	transition: box-shadow 0.1s linear;
+}
+input[type=text]:focus, textarea:focus {
+	box-shadow: 0 0 1.5rem 0 rgba(80, 255, 80, 1.0);
+	transition: box-shadow 0.1s linear;
+	outline: none;
 }
 
 form p:last-child {
@@ -142,55 +148,57 @@ form p:last-child {
 .fields {
 	background: white;
 	border: 1px solid silver;
-	padding: 0.5em;
-	box-shadow: 0 0 0.4em 0 gray;
+	padding: 0.5rem;
+	box-shadow: 0 0 0.4rem 0 gray;
 }
 
 .narrowgowides {
 	white-space: nowrap;
 }
-.narrowgowides label {
-	margin-right: 2em;
+.narrowgowides input {
+	margin-right: 2rem;
 }
-.narrowgowides label:last-child {
+.narrowgowides input:last-child {
 	margin-right: 0;
 }
 .narrowgowides input {
-	width: 11em;
+	width: 13rem;
 }
 @media screen and (max-width: 57em) {
 	.narrowgowides label {
-		width: 3.5em;
-		margin-left: 0;
+		width: 3.5rem;
+	}
+	.narrowgowides input {
+		margin-right: 0;
 	}
 	.narrowgowides {
-		width: 18em;
+		width: 18rem;
 		white-space: normal;
 	}
 }
 
 .modery {
 	font-family: Verdana, sans-serif;
-	font-size: 80%;
+	font-size: 94%;
 	position: relative;
-	top: -1.33em;
-	margin-bottom: 0.33em;
+	top: -1.33rem;
+	margin-bottom: 0.33rem;
 }
 .chungus label {
-	min-width: 6em;
+	min-width: 6rem;
 }
 .chungus textarea {
-	width: calc(100% - 7em);
+	width: calc(100% - 7.5rem);
 }
 .chungus input.chungus {
-	width: calc(100% - 7em);
+	width: calc(100% - 7.5rem);
 }
 .postchex {
-	margin-left: 5.7em;
+	margin-left: 6.1rem;
 }
 .optionality {
 	position: absolute;
-	top: 1.45em;
+	top: 1.45rem;
 	transform: scaleY(0.8);
 	color: #337733;
 }
@@ -212,8 +220,8 @@ form p:last-child {
 .pitch {
 	border: solid 1px silver;
 	background: white;
-	padding: 0.6em 1em;
-	margin: 1.5em 2em;
+	padding: 0.6rem 1em;
+	margin: 1.5rem 2rem;
 }
 .pitch.dark {
 	background: #EEEEEE;
@@ -228,16 +236,16 @@ form p:last-child {
 	color: #DDAA00;
 }
 .uppergap {
-	margin-top: 1em;
+	margin-top: 1rem;
 }
 .lowergap {
-	margin-bottom: 1em;
+	margin-bottom: 1rem;
 }
 .uppergap .favetitle {
-	line-height: 1.1em;
+	line-height: 1rem;
 }
 .aftergap {
-	margin-right: 2em;
+	margin-right: 2rem;
 }
 .stars .star {
 	font-size: 180%;
@@ -245,11 +253,12 @@ form p:last-child {
 	cursor: pointer;
 }
 .stars .spam {
-	margin-left: 4em;
+	margin-left: 4rem;
 	color: #444444;
 	font-style: italic;
 	font-family: Verdana, sans-serif;
-	font-size: 88%;
+	font-size: 94%;
+	color: #000077;
 	cursor: pointer;
 }
 .spam:hover {
@@ -263,12 +272,12 @@ form p:last-child {
 .favetitle {
 	display: inline-block;
 	margin: 0;
-	line-height: 1.25em;
+	line-height: 1.25rem;
 }
 .otherstar {
 	font-family: Verdana, sans-serif;
 	font-weight: normal;
-	font-size: 66.6%;
+	font-size: 70%;
 	white-space: nowrap;
 	color: #666666;
 }
@@ -279,14 +288,14 @@ form p:last-child {
 
 .meta {
 	font-family: Verdana, sans-serif;
-	font-size: 90%;
+	font-size: 94%;
 	color: #444444;
 }
 .meta .fields {
-	margin-top: 2em;
+	margin-top: 2rem;
 }
 .meta .blockquote {
-	padding: 0.75em 1em 0.75em 2em;
+	padding: 0.75rem 1rem 0.75rem 2rem;
 }
 .lit {
 	font-family: Georgia, serif;
@@ -296,14 +305,14 @@ form p:last-child {
 .qq {
 	font-size: 120%;
 	font-weight: bold;
-	margin: 0.33em 0;
+	margin: 0.33rem 0;
 }
 .meta label {
-	margin-right: 2em;
+	margin-right: 2rem;
 }
 .userSummary {
 	font-family: Verdana, sans-serif;
-	font-size: 90%;
+	font-size: 94%;
 }
 .userSummary td {
 	vertical-align: middle;
